@startuml
'https://plantuml.com/component-diagram
skinparam linetype polyline
skinparam linetype ortho

entity Book {
* id
..
+ username
+ title
+ opening_date
+ closing_date
}

entity AccountGroup {
* id
# book_id
..
+ group_number
+ title
}

entity Account {
* id
# account_group_id
..
+ account_number
+ account_type
+ title
  description
}

enum AccountType {
  ASSET
  LIABILITY
  EXPENSE
  INCOME
}

entity BookingRecord {
* id
# book_id
..
+ booking_text
+ booking_date
  description
}

entity BookingMovement {
# booking_record_id
# account_id
..
+ amount
}

Book ||--o{ AccountGroup
AccountGroup |o--o{ Account
Book ||--o{ BookingRecord
BookingRecord ||--{ "2..n" BookingMovement

Account ||--o{ BookingMovement
AccountType <- Account

@enduml